--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SWISSH</title>
+    <title>WISSH</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="node_modules/@xterm/xterm/css/xterm.css">
