--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 xtermWebglAddon.dispose();
             });
             terminal.loadAddon(xtermWebglAddon);
-        } catch (e) {
-            console.warn('Failed to load xterm WebGL addon', e);
+        } catch (err) {
+            console.warn('Failed to load xterm WebGL addon', err);
             xtermWebglAddon.dispose();
         }
 
@@ -38,13 +38,13 @@
         const xtermFitAddon = new FitAddon.FitAddon();
         try {
             terminal.loadAddon(xtermFitAddon);
-        } catch (e) {
-            console.error('Failed to load xterm fit addon', e);
+        } catch (err) {
+            console.error('Failed to load xterm fit addon', err);
             xtermFitAddon.dispose();
         }
 
         /* WebSocket */
-        const ws = new WebSocket(`ws://${window.location.host}/xterm`);
+        const ws = new WebSocket(`ws://${window.location.host}/wissh`);
         ws.onopen = (event) => {
             xtermFitAddon.fit();
             ws.send(JSON.stringify({ resize: { cols: terminal.cols, rows: terminal.rows } }));
@@ -54,8 +54,8 @@
         const xtermAttachAddon = new AttachAddon.AttachAddon(ws);
         try {
             terminal.loadAddon(xtermAttachAddon);
-        } catch (e) {
-            console.error('Failed to load xterm attach addon', e);
+        } catch (err) {
+            console.error('Failed to load xterm attach addon', err);
             xtermAttachAddon.dispose();
             ws.close();
         }
