--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,20 @@
     <title>WISSH</title>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="node_modules/@xterm/xterm/css/xterm.css">
+    <link rel="stylesheet" href="/scripts/@xterm/xterm/css/xterm.css">
 
     <!-- Scripts -->
-    <script src="node_modules/@xterm/xterm/lib/xterm.js"></script>
-    <script src="node_modules/@xterm/addon-attach/lib/addon-attach.js"></script>
-    <script src="node_modules/@xterm/addon-fit/lib/addon-fit.js"></script>
-    <script src="node_modules/@xterm/addon-webgl/lib/addon-webgl.js"></script>
+    <script src="/scripts/@xterm/xterm/lib/xterm.js"></script>
+    <script src="/scripts/@xterm/addon-attach/lib/addon-attach.js"></script>
+    <script src="/scripts/@xterm/addon-fit/lib/addon-fit.js"></script>
+    <script src="/scripts/@xterm/addon-webgl/lib/addon-webgl.js"></script>
 </head>
 <body>
     <div id="terminal"></div>
     <script>
         /* Terminal */
         const terminal = new Terminal();
-        terminal.open(document.getElementById('terminal'));
+        terminal.open(document.getElementById("terminal"));
 
         /* WebGL */
         const xtermWebglAddon = new WebglAddon.WebglAddon();
@@ -30,7 +30,7 @@
             });
             terminal.loadAddon(xtermWebglAddon);
         } catch (err) {
-            console.warn('Failed to load xterm WebGL addon', err);
+            console.warn("Failed to load xterm WebGL addon", err);
             xtermWebglAddon.dispose();
         }
 
@@ -39,7 +39,7 @@
         try {
             terminal.loadAddon(xtermFitAddon);
         } catch (err) {
-            console.error('Failed to load xterm fit addon', err);
+            console.error("Failed to load xterm fit addon", err);
             xtermFitAddon.dispose();
         }
 
@@ -55,13 +55,13 @@
         try {
             terminal.loadAddon(xtermAttachAddon);
         } catch (err) {
-            console.error('Failed to load xterm attach addon', err);
+            console.error("Failed to load xterm attach addon", err);
             xtermAttachAddon.dispose();
             ws.close();
         }
 
         /* Resize handler */
-        window.addEventListener('resize', () => {
+        window.addEventListener("resize", () => {
             xtermFitAddon.fit();
             /* TODO: Come up with a more robust solution for communicating resize events */
             ws.send(JSON.stringify({ resize: { cols: terminal.cols, rows: terminal.rows } }));
